Get objective box and score markers to render